--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,10 +3,34 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Nunito:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
+
+:root {
+  --scheme-0: #ffd900;
+  --scheme-1: #202060;
+  --scheme-2: #602080;  
+  --scheme-3: #b030b0;
+  --scheme-4: #6c91bf;
+  --scheme-5: #5bc8af;
+}
 
 .bubbly {
   font-family: "Bagel Fat One", system-ui;
   font-weight: 400;
+  font-style: normal;
+}
+
+.nunito {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.nunito-bold {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
   font-style: normal;
 }
 
@@ -15,35 +39,90 @@
   justify-content: space-between;
 }
 
-.confetti-button.animate:before {
+.confetti-button {
+  /* Basic button styles */
+  box-shadow: 2px 2px 10px #c7b8bf;
+  position: relative;
+  overflow: hidden;
+  padding: 10px 20px; /* Example padding */
+  border: none; /* Remove default border */
+  background-color: #6c91bf; /* Button background color */
+  color: white; /* Button text color */
+  font-size: 30px; /* Font size */
+  font-family: nunito;
+  cursor: pointer; /* Cursor style */
+  transition: background-color 0.3s; /* Smooth background color transition */
+}
+
+.confetti-button:hover {
+  box-shadow: 2px 2px 10px #ff9a8a;
+}
+
+.confetti-button:before, 
+.confetti-button:after {
+  content: '';
+  display: none;
+  position: absolute;
+  width: 200%;
+  height: 200%;
+  left: -50%;
+  top: -50%;
+  pointer-events: none;
+  background-repeat: no-repeat;
+}
+
+.confetti-button:before {
+  background-image: radial-gradient(circle, var(--scheme-0) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-1) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-2) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-3) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-4) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-5) 20%, transparent 20%);
+  background-size: 10% 10%;
+}
+
+.confetti-button:after {
+  background-image: radial-gradient(circle, var(--scheme-0) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-1) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-2) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-3) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-4) 20%, transparent 20%),
+                    radial-gradient(circle, var(--scheme-5) 20%, transparent 20%);
+  background-size: 10% 10%;
+}
+
+.confetti-button:hover:before {
   display: block;
-  animation: topBubbles ease-in-out 0.75s forwards;
+  animation: topBubbles ease-in-out 1s forwards;
 }
-.confetti-button.animate:after {
+
+.confetti-button:hover:after {
   display: block;
-  animation: bottomBubbles ease-in-out 0.75s forwards;
+  animation: bottomBubbles ease-in-out 1s forwards;
 }
-@keyframes 
-topBubbles {  0% {
- background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+
+@keyframes topBubbles {
+  0% {
+    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+  }
+  50% {
+    background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+  }
+  100% {
+    background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+  }
 }
- 50% {
- background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
-}
- 100% {
- background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
- background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-}
-}
-@keyframes 
-bottomBubbles {  0% {
- background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
-}
- 50% {
- background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
-}
- 100% {
- background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
- background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-}
+
+@keyframes bottomBubbles {
+  0% {
+    background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+  }
+  50% {
+    background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+  }
+  100% {
+    background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+  }
 }
