--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Nunito:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 :root {
   --scheme-0: #ffd900;
@@ -12,11 +13,35 @@
   --scheme-3: #b030b0;
   --scheme-4: #6c91bf;
   --scheme-5: #5bc8af;
+
+  --peach-shadow: #ff9a8a;
+  --white-shadow: #c7b8bf;
+
+  --slate-black: #181b1e;
+}
+
+body {
+  overflow: hidden;
 }
 
 .bubbly {
   font-family: "Bagel Fat One", system-ui;
   font-weight: 400;
+  font-style: normal;
+  padding: 0;
+}
+
+.not-as-bubbly {
+  font-family: "Bagel Fat One", system-ui;
+  font-weight: 10;
+  font-style: normal;
+  padding: 0;
+}
+
+.blocky {
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -34,6 +59,10 @@
   font-style: normal;
 }
 
+.home-page {
+  background: var(--slate-black);
+}
+
 .card-container {
   display: flex;
   justify-content: space-between;
@@ -41,7 +70,7 @@
 
 .confetti-button {
   /* Basic button styles */
-  box-shadow: 2px 2px 10px #c7b8bf;
+  box-shadow: 2px 2px 10px var(--white-shadow);
   position: relative;
   overflow: hidden;
   padding: 10px 20px; /* Example padding */
@@ -55,7 +84,7 @@
 }
 
 .confetti-button:hover {
-  box-shadow: 2px 2px 10px #ff9a8a;
+  box-shadow: 2px 2px 10px var(--peach-shadow);
 }
 
 .confetti-button:before, 
@@ -125,4 +154,19 @@
     background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
     background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
   }
+}
+
+.moving-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100px; /* Adjust the size as needed */
+  height: 100px; /* Adjust the size as needed */
+  transition: all 5s linear;
+}
+
+
+.moving-image.move {
+  top: 80%;
+  left: 80%;
 }
