Made the horse moving animation and finish line logic. Started the rocket racing bets page. More styling.
Co-authored-by: Samwurel <Samwurel@users.noreply.github.com>
Co-authored-by: Shuhei-uni <Shuhei-uni@users.noreply.github.com>
Co-authored-by: Chris O <ChrisO345@users.noreply.github.com>
Co-authored-by: Jessica Zeng <jessicazeng13@users.noreply.github.com>
Co-authored-by: kecaoo <kecaoo@users.noreply.github.com>

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,6 +63,10 @@ body {
   background: var(--slate-black);
 }
 
+.slater {
+  background: var(--slate-black);
+}
+
 .card-container {
   display: flex;
   justify-content: space-between;
@@ -170,3 +174,4 @@ body {
   top: 80%;
   left: 80%;
 }
+
