--- a/client/src/index.css
+++ b/client/src/index.css
@@ -175,3 +175,26 @@ body {
   left: 80%;
 }
 
+.styled-button {
+  background-color: var(--scheme-1);
+  border: none; /* Remove default border */
+  color: white; /* White text */
+  padding: 15px 15px; /* Padding inside the button */
+  text-align: center; /* Center text */
+  text-decoration: none; /* Remove underline */
+  display: inline-block; /* Make the button inline */
+  font-size: 16px; /* Text size */
+  margin: 4px 2px; /* Margin around the button */
+  cursor: pointer; /* Pointer cursor on hover */
+  border-radius: 8px; /* Rounded corners */
+  transition: background-color 0.3s ease; /* Smooth transition for background color */
+}
+
+.styled-button:hover {
+  background-color: #4848af; /* Darker green on hover */
+}
+
+.styled-button:active {
+  background-color: var(--scheme-5); /* Even darker green on click */
+  transform: translateY(2px); /* Slightly move the button down on click */
+}
