--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,200 +1,270 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Nunito:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cairo');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Nunito:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
-
 :root {
-  --scheme-0: #ffd900;
-  --scheme-1: #202060;
-  --scheme-2: #602080;  
-  --scheme-3: #b030b0;
-  --scheme-4: #6c91bf;
-  --scheme-5: #5bc8af;
+    --scheme-0: #ffd900;
+    --scheme-1: #202060;
+    --scheme-2: #602080;
+    --scheme-3: #b030b0;
+    --scheme-4: #6c91bf;
+    --scheme-5: #5bc8af;
 
-  --peach-shadow: #ff9a8a;
-  --white-shadow: #c7b8bf;
+    --peach-shadow: #ff9a8a;
+    --white-shadow: #c7b8bf;
 
-  --slate-black: #181b1e;
+    --slate-black: #181b1e;
 }
 
 body {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .bubbly {
-  font-family: "Bagel Fat One", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  padding: 0;
+    font-family: "Bagel Fat One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    padding: 0;
 }
 
 .not-as-bubbly {
-  font-family: "Bagel Fat One", system-ui;
-  font-weight: 10;
-  font-style: normal;
-  padding: 0;
+    font-family: "Bagel Fat One", system-ui;
+    font-weight: 10;
+    font-style: normal;
+    padding: 0;
 }
 
 .blocky {
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .nunito {
-  font-family: "Nunito", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .nunito-bold {
-  font-family: "Nunito", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: bold;
-  font-style: normal;
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
 }
 
 .home-page {
-  background: var(--slate-black);
+    background: var(--slate-black);
 }
 
 .slater {
-  background: var(--slate-black);
+    background: var(--slate-black);
 }
 
 .card-container {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .confetti-button {
-  /* Basic button styles */
-  box-shadow: 2px 2px 10px var(--white-shadow);
-  position: relative;
-  overflow: hidden;
-  padding: 10px 20px; /* Example padding */
-  border: none; /* Remove default border */
-  background-color: #6c91bf; /* Button background color */
-  color: white; /* Button text color */
-  font-size: 30px; /* Font size */
-  font-family: nunito;
-  cursor: pointer; /* Cursor style */
-  transition: background-color 0.3s; /* Smooth background color transition */
+    /* Basic button styles */
+    box-shadow: 2px 2px 10px var(--white-shadow);
+    position: relative;
+    overflow: hidden;
+    padding: 10px 20px; /* Example padding */
+    border: none; /* Remove default border */
+    background-color: #6c91bf; /* Button background color */
+    color: white; /* Button text color */
+    font-size: 30px; /* Font size */
+    font-family: nunito, serif;
+    cursor: pointer; /* Cursor style */
+    transition: background-color 0.3s; /* Smooth background color transition */
 }
 
 .confetti-button:hover {
-  box-shadow: 2px 2px 10px var(--peach-shadow);
+    box-shadow: 2px 2px 10px var(--peach-shadow);
 }
 
-.confetti-button:before, 
+.confetti-button:before,
 .confetti-button:after {
-  content: '';
-  display: none;
-  position: absolute;
-  width: 200%;
-  height: 200%;
-  left: -50%;
-  top: -50%;
-  pointer-events: none;
-  background-repeat: no-repeat;
+    content: '';
+    display: none;
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    left: -50%;
+    top: -50%;
+    pointer-events: none;
+    background-repeat: no-repeat;
 }
 
 .confetti-button:before {
-  background-image: radial-gradient(circle, var(--scheme-0) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-1) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-2) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-3) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-4) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-5) 20%, transparent 20%);
-  background-size: 10% 10%;
+    background-image: radial-gradient(circle, var(--scheme-0) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-1) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-2) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-3) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-4) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-5) 20%, transparent 20%);
+    background-size: 10% 10%;
 }
 
 .confetti-button:after {
-  background-image: radial-gradient(circle, var(--scheme-0) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-1) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-2) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-3) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-4) 20%, transparent 20%),
-                    radial-gradient(circle, var(--scheme-5) 20%, transparent 20%);
-  background-size: 10% 10%;
+    background-image: radial-gradient(circle, var(--scheme-0) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-1) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-2) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-3) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-4) 20%, transparent 20%),
+    radial-gradient(circle, var(--scheme-5) 20%, transparent 20%);
+    background-size: 10% 10%;
 }
 
 .confetti-button:hover:before {
-  display: block;
-  animation: topBubbles ease-in-out 1s forwards;
+    display: block;
+    animation: topBubbles ease-in-out 1s forwards;
 }
 
 .confetti-button:hover:after {
-  display: block;
-  animation: bottomBubbles ease-in-out 1s forwards;
+    display: block;
+    animation: bottomBubbles ease-in-out 1s forwards;
 }
 
 @keyframes topBubbles {
-  0% {
-    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
-  }
-  50% {
-    background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
-  }
-  100% {
-    background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
-    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-  }
+    0% {
+        background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+    }
+    50% {
+        background-position: 0 80%, 0 20%, 10% 40%, 20% 0, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+    }
+    100% {
+        background-position: 0 70%, 0 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+        background-size: 0 0, 0 0, 0 0, 0 0, 0 0, 0 0;
+    }
 }
 
 @keyframes bottomBubbles {
-  0% {
-    background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
-  }
-  50% {
-    background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
-  }
-  100% {
-    background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
-    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-  }
+    0% {
+        background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0;
+    }
+    50% {
+        background-position: 0 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0;
+    }
+    100% {
+        background-position: 0 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+        background-size: 0 0, 0 0, 0 0, 0 0, 0 0, 0 0;
+    }
 }
 
 .moving-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100px; /* Adjust the size as needed */
-  height: 100px; /* Adjust the size as needed */
-  transition: all 5s linear;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100px; /* Adjust the size as needed */
+    height: 100px; /* Adjust the size as needed */
+    transition: all 5s linear;
 }
 
 
 .moving-image.move {
-  top: 80%;
-  left: 80%;
+    top: 80%;
+    left: 80%;
 }
 
 .styled-button {
-  background-color: var(--scheme-1);
-  border: none; /* Remove default border */
-  color: white; /* White text */
-  padding: 15px 15px; /* Padding inside the button */
-  text-align: center; /* Center text */
-  text-decoration: none; /* Remove underline */
-  display: inline-block; /* Make the button inline */
-  font-size: 16px; /* Text size */
-  margin: 4px 2px; /* Margin around the button */
-  cursor: pointer; /* Pointer cursor on hover */
-  border-radius: 8px; /* Rounded corners */
-  transition: background-color 0.3s ease; /* Smooth transition for background color */
+    background-color: var(--scheme-1);
+    border: none; /* Remove default border */
+    color: white; /* White text */
+    padding: 15px 15px; /* Padding inside the button */
+    text-align: center; /* Center text */
+    text-decoration: none; /* Remove underline */
+    display: inline-block; /* Make the button inline */
+    font-size: 16px; /* Text size */
+    margin: 4px 2px; /* Margin around the button */
+    cursor: pointer; /* Pointer cursor on hover */
+    border-radius: 8px; /* Rounded corners */
+    transition: background-color 0.3s ease; /* Smooth transition for background color */
 }
 
 .styled-button:hover {
-  background-color: #4848af; /* Darker green on hover */
+    background-color: #4848af; /* Darker green on hover */
 }
 
 .styled-button:active {
-  background-color: var(--scheme-5); /* Even darker green on click */
-  transform: translateY(2px); /* Slightly move the button down on click */
+    background-color: var(--scheme-5); /* Even darker green on click */
+    transform: translateY(2px); /* Slightly move the button down on click */
+}
+
+
+/* #####################################################################################################################
+# SLOTS
+##################################################################################################################### */
+@keyframes spin {
+    to {
+        transform: rotate(360deg)
+    }
+}
+
+#repeatButton {
+    appearance: none;
+    border: none;
+    width: 48px;
+    height: 100px;
+    top: 10px;
+    right: 20px;
+    transform: translateY(50%);
+    cursor: pointer;
+}
+
+.h1-element {
+    font-size: 150%;
+    font-family: 'Cairo', sans-serif;
+}
+
+.h1-element span {
+    color: aliceblue;
+    border: 1px solid hsla(208, 100%, 97.1%, .1);
+    display: inline-block;
+    padding: 0.75rem 1rem;
+}
+
+.icons {
+    display: inline-block;
+    width: 166px;
+    height: 537px;
+    overflow: hidden;
+    background: #fff url("../public/assets/slots/Stack_Slots.png") repeat-y; /* TODO: JS */
+    background-size: 100% auto;
+    will-change: backgroundPosition;
+    transition: 0.3s background-position ease-in-out;
+    padding: 0 80px;
+    transform: translateZ(0);
+}
+
+.icons:nth-child(2) {
+    margin: 0 10px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.spinner-parent {
+    /*width: 50%;*/
+}
+
+.spinner-container {
+    /*overflow-x: hidden;*/
+    height: 537px;
+    display: flex;
+    transition: 0.3s transform;
+}
+
+.app-wrap.winner-false {
+    animation: linear 1s spin;
 }
